# soa_ragnarok

./: CMakeLists.txt  README.md  main.c  makefile
fimbulvetr/: fs_detector.c  fs_detector.h
fs_utils/: CMakeLists.txt  common.c  common.h  ext4.c  ext4.h  fat32.c  fat32.h  fs_detector.c  fs_detector.h
functionalities/: CMakeLists.txt  fimbulvetr.c  fimbulvetr.h  functionalities.c  functionalities.h
lib/: CMakeLists.txt  exitCodes.h  hashtable.c  hashtable.h  orderedBuffer.c  orderedBuffer.h  processTree.c  processTree.h  roundRobin.c  roundRobin.h  semaphore.c  semaphore.h  stringUtils.c  stringUtils.h  tools.c  tools.h  types.h
shell/: CMakeLists.txt  commands.c  commands.h
